src/assets/styles.css
/* The following css file follows the BEM naming convention (https://getbem.com/naming/) */
/* Note that if magic numbers are used, chances is that there's no special meaning behind it and that it just looks nice */
:root {
    --ecf-green: #749b88;
    --ecf-green-rgb: 116, 155, 136;
    --ecf-green-translucent: rgba(var(--ecf-green-rgb), 0.7);
    --ecf-red: #fc6467;
    --border-color: silver;
    --nav-height: 10vh;
    --h1-size: 3vw;
    --h2-size: 1.4vw;
    --h3-size: 1.4vw;
    --h4-size: 1.05vw;
    --arbitrary-card-min-width: 250px;
}

* {
    margin: 0;
    padding: 0;
}

h1 {
    font-family: "Montserrat", sans-serif;
    font-size: var(--h1-size);
}

a,
h2 {
    font-family: "Quicksand", sans-serif;
    font-size: var(--h2-size);
}

h3 {
    font-family: "Montserrat", sans-serif;
    font-size: var(--h3-size);
}

h4 {
    font-family: "Quicksand", sans-serif;
    font-size: var(--h4-size);
}

a {
    color: white;
    text-decoration: none;
}

a:hover {
    color: var(--ecf-green);
}

html,
body {
    height: 100%;
}

body,
.wrapper {
    /* Flex to ensure sticky footer */
    display: flex;
    flex-direction: column;
    height: 100%;
}

.parallax {
    /* Create the parallax scrolling effect. NOTE THAT WE STILL NEED A BG IMAGE! */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.parallax--full-width-height {
    width: 100vw;
    height: calc(110vh - var(--nav-height));
}

.orange-bar {
    width: 10vw;
    height: 0;
    border-top: 0.7vh solid var(--ecf-red);
}

.orange-bar--20 {
    width: 20vw;
}

.white-bar {
    width: 10vw;
    height: 0;
    border-top: 0.7vh solid white;
}

.white-bar--thin {
    border-top: 0.3vh solid white;
}

.transparent-button {
    width: 25vw;
    color: black;
    background: rgba(0, 0, 0, 0);
    border: 0.1rem solid black;
    border-radius: 1rem;
    padding: 2vh 0;
    text-align: center;
    font-weight: bolder;
}

.transparent-button:hover {
    color: var(--ecf-green);
    background-color: black;
}

.transparent-button--white {
    color: white;
    border-color: white;
}

.transparent-button--white:hover {
    background-color: white;
}

.content {
    /* Default sticky footer stuff*/
    display: flex;
    flex-direction: column;
    flex: 1 0 auto;
}

.greeter-overlay {
    display: flex;
    flex-direction: column;
    row-gap: 3vh;
    position: absolute;
    bottom: 20vh;
    left: 5vw;
    width: 25%;
    color: white;
}

/* Separate orange bar from content */
.greeter-overlay > div > h1 {
    margin: 0 0 1vh;
}

/* Add more emphasis to the text */
.greeter-overlay h1 {
    font-size: calc(var(--h1-size) * 1.25);
    color: white;
}

/* Add more emphasis to the text */
.greeter-overlay h2 {
    font-size: calc(var(--h2-size) * 1.25);
    color: white;
}

.greeter-overlay--40 {
    width: 40%;
}

/* Nav start */
/* TODO mobile nav */
nav {
    display: flex;
    flex-direction: row;
    height: var(--nav-height);
    width: 100vw;
    background-color: white;
    align-items: center;
}

nav .nav__logo {
    /* Ensure that height does not exceed var(--nav-height) */
    height: calc(var(--nav-height) - 2vh);
    padding: 0 0 0 2vw;
    color: black;
}

nav > ul {
    list-style: none;
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    /* No grid gap in favour of borders for each individual li */
    /* width of 70% to ensure some spacing between the logo and everything else */
    width: 70%;
    height: 100%;
    /* The nice and handy align left */
    margin: auto 0 auto auto;
}

nav > ul > li {
    /* The position: relative is important! Without this, the width 100% will not work for the nav dropdown*/
    position: relative;
    /*
    This specific border behaviour causes weird artifacting, but I think I prefer it this way.
    No specific reason why these border sizes were chose, just ensure that they are the same
    Update: After fixing some other styles, the artifacting seems to be mostly gone.
    */
    border-left: 0.15vw solid var(--border-color);
}

nav li:first-child {
    /* We don't want a left divider on the left most element */
    border-left: 0;
}

nav li:last-child {
    /* Remove the left divider between the last and second last element as the last is expected to be a different colour */
    border-left: 0;
}

nav li:last-child > a {
    /* This is expected to be the donate button */
    background-color: var(--ecf-green);
}

nav li:last-child > a:hover {
    /* This is expected to be the donate button */
    background-color: black;
}

nav > ul > li a {
    /* Just positioning for nav links */
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    color: black;
}

nav li > a:hover {
    color: var(--ecf-green);
}

nav > ul > li > a > .nav__current-indicator {
    position: absolute;
    /* We want the indicator to be at the bottom of the nav */
    bottom: 0;
    width: 100%;
    height: 1vh;
    background-color: var(--ecf-green);
}

/* Some code to change the display of the up/down caret depending on whether it's parent is being hovered on. */
nav .nav__about-caret > .fa-caret-up {
    display: none;
}

nav li:hover > .nav-dropdown,
nav li:hover .nav__about-caret > .fa-caret-up {
    display: block;
}

nav li:hover .nav__about-caret > .fa-caret-down {
    display: none;
}

/* Some stuff to affect the display of the dropdown/caret icon */
.nav-dropdown {
    display: none;
    position: absolute;
    width: 100%;
}
/* ... */

